--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.29.2",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.16"
   },
